Dodao izmene za cover sliku, footer na najmanjem ekranu i & entiti

--- a/index.html
+++ b/index.html
@@ -88,12 +88,12 @@
 			<div class="kolone">
 				<div>
 					<span class="fa fa-pencil-square-o"></span>
-					<h5>WEB DESIGN & DEVELOPMENT</h5>
+					<h5>WEB DESIGN &amp; DEVELOPMENT</h5>
 					<p>The life of a designer is a life of fight. Fight against the ugliness. Just like a doctor fights against disease.</p>
 				</div>
 				<div>
 					<span class="fa fa-bar-chart"></span>
-					<h5>BRANDING & IDENTITY</h5>
+					<h5>BRANDING &amp; IDENTITY</h5>
 					<p>The life of a designer is a life of fight. Fight against the ugliness. Just like a doctor fights against disease.</p>
 				</div>
 				<div>
